# hpkit

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: adapters.c  adapters.h  adapters_common.c  adapters_common.h  adapters_lowlevel.c  adapters_lowlevel.h  aderror.c  aderror.h  colors.h  common.c  common.h  galvant_proto.c  galvant_proto.h  hpib.c  hpib.h  hplisten.c  hplot.c  hprologix.c  hptalk.c  prologix_proto.c  prologix_proto.h  proto.c  proto.h  test.c
src/adapters/: prologix.conf.xml
