bin_PROGRAMS = hplot hplisten hptalk hprologix

hplot_SOURCES = \
	src/hpib.c	     \
	src/proto.c	     \
	src/common.c	     \
	src/adapters.c	     \
	src/adapters_common.c\
	src/prologix_proto.c \
	src/galvant_proto.c  \
	src/hplot.c

hplisten_SOURCES = \
	src/hpib.c	     \
	src/common.c	     \
	src/adapters.c	     \
	src/adapters_common.c\
	src/prologix_proto.c \
	src/galvant_proto.c  \
	src/hplisten.c

hptalk_SOURCES = \
	src/hpib.c	     \
	src/common.c	     \
	src/adapters.c	     \
	src/adapters_common.c\
	src/prologix_proto.c \
	src/galvant_proto.c  \
	src/hptalk.c

hprologix_SOURCES = \
	src/hpib.c	     \
	src/common.c	     \
	src/adapters.c       \
	src/adapters_common.c\
	src/prologix_proto.c \
	src/galvant_proto.c  \
	src/hprologix.c
